<resources>
    <string name="app_name">MedTech App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movement_text">Rörelse</string>
    <string name="visual_text">Visuellt</string>
    <string name="audial_text">Hörsel</string>
    <string name="hs_text">Highscores</string>
    <string name="react_text">Tryck på skärmen när bakgrunden blir grön. Tryck på knappen för att starta!</string>
    <string name="soundReact_text">Tryck på skärmen när du hör ljudet. Tryck på knappen för att starta!</string>
    <string name="continue_text">Klicka för att fortsätta</string>
    <string name="too_fast_text">Du klickade för fort, försök igen</string>
    <string name="vibration_text">Vibration</string>
    <string name="start_test_text">Starta testet</string>
    <string name="instruction_text">När den röda skärmen blir grön, tryck så snabbt du kan</string>
    <string name="motion_instruction">Rotera din kropp och mobilen i riktingen som pilen visar</string>
</resources>