<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:text="@string/hs_text"
        android:onClick="openHighscores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/visual_text"
            android:onClick="openVisual"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/moveButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="openMoveActivity"
            android:text="@string/movement_text"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/audial_text"
            android:onClick="openSound"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>